# libstrophe

./: .gitignore  Makefile.am  amiga_2include_2inline4_2expat_8h.html  amiga_2include_2interfaces_2expat_8h.html  amiga_2include_2libraries_2expat_8h.html  amiga_2include_2proto_2expat_8h.html  amigaconfig_8h.html  annotated.html  ascii_8h.html  asciitab_8h.html  auth_8c.html  benchmark_8c.html  bootstrap.sh  chardata_8c.html  chardata_8h.html  class_x_m_p_p_1_1_connection.html  class_x_m_p_p_1_1_context.html  class_x_m_p_p_1_1_stanza.html  classes.html  codepage_8c.html  codepage_8h.html  common_8h.html  configure.ac  conn_8c.html  ct_8c.html  ctx_8c.html  elements_8c.html  event_8c.html  expat__config_8h.html  expat__external_8h.html  expat__lib_8c.html  expat__vectors_8c.html  filemap_8h.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  (+271 more)
m4/: detectcc.m4
src/: auth.c  common.h  conn.c  ctx.c  handler.c  md5.c  md5.h  parser_libxml2.c  sasl.c  sha1.c  sha1.h  sock.c  stanza.c  tls_openssl.c
tests/: check_ctx.c  check_parser.c  check_stanza.c  test.h
